fix button styling on mobile

--- a/style.css
+++ b/style.css
@@ -26,8 +26,10 @@ button {
     margin: 8px 0;
     display: inline-block;
     border: 1px solid rgb(0, 0, 0);
+    -webkit-border-radius: none;
     border-radius: 4px;
     box-sizing: border-box;
+    -webkit-appearance: none;
 }
 
 input[type="button"] {
